<resources>
    <string name="app_name">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="favorites">Favorites</string>
    <string name="budget">Budget</string>
    <string name="overview">Overview</string>
    <string name="revenue">Revenue</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="no_movies_found">No movies found</string>
</resources>